<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.gate-org-br</groupId>
	<artifactId>gate</artifactId>
	<version>4.35.0</version>
	<packaging>war</packaging>

	<name>gate</name>
	<description>A multipurpose java library</description>

	<developers>
		<developer>
			<id>davinunesdasilva</id>
			<name>Davi Nunes da Silva</name>
			<email>davinunesdasilva@gmail.com</email>
		</developer>
	</developers>


	<url>
		https://github.com/gate-org-br/gate
	</url>

	<scm>
		<url>https://github.com/gate-org-br/gate</url>
	</scm>

	<licenses>
		<license>
			<distribution>repo</distribution>
			<url>https://www.gnu.org/licenses/lgpl-3.0.en.html</url>
			<name>GNU LESSER GENERAL PUBLIC LICENSE Version 3, 29 June 2007</name>
		</license>
	</licenses>

	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>mysql</groupId>
			<scope>test</scope>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.44</version>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.11</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.enterprise.concurrent</groupId>
			<artifactId>javax.enterprise.concurrent-api</artifactId>
			<version>1.0-b05</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<scope>test</scope>
			<version>2.44.0</version>
		</dependency>
		<dependency>
			<groupId>com.opera</groupId>
			<artifactId>operadriver</artifactId>
			<scope>test</scope>
			<version>1.5</version>
			<exclusions>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-remote-driver</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-web-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.54</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>1.5.6</version>
		</dependency>
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.17</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.12</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.ganymed</groupId>
			<artifactId>ganymed-ssh2</artifactId>
			<version>262</version>
		</dependency>

		<dependency>
			<groupId>javax.jms</groupId>
			<artifactId>javax.jms-api</artifactId>
			<version>2.0.1</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.0</version>
		</dependency>

	</dependencies>

	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArguments>
						<endorseddirs>${endorsed.dir}</endorseddirs>
					</compilerArguments>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<outputDirectory>${project.build.directory}</outputDirectory>

					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<outputDirectory>${endorsed.dir}</outputDirectory>
							<silent>true</silent>
							<artifactItems>
								<artifactItem>
									<groupId>javax</groupId>
									<artifactId>javaee-endorsed-api</artifactId>
									<version>7.0</version>
									<type>jar</type>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>make-a-jar</id>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<packaging>jar</packaging>
							<artifactId>${project.artifactId}</artifactId>
							<groupId>${project.groupId}</groupId>
							<version>${project.version}</version>
							<file>
								${project.build.directory}/${project.artifactId}-${project.version}.jar
							</file>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<executions>
					<execution>
						<phase>deploy</phase>
						<goals>
							<goal>deploy-file</goal>
						</goals>
						<configuration>
							<packaging>jar</packaging>
							<generatePom>true</generatePom>
							<url>${project.distributionManagement.repository.url}</url>
							<artifactId>${project.artifactId}</artifactId>
							<groupId>${project.groupId}</groupId>
							<version>${project.version}</version>
							<file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>yuicompressor-maven-plugin</artifactId>
				<version>1.3.2</version>
				<configuration>
					<preProcessAggregates>true</preProcessAggregates>
					<aggregations>
						<aggregation>
							<insertNewLine>true</insertNewLine>
							<inputDir>${basedir}/src/main/webapp/Gate</inputDir>
							<output>${basedir}/target/${project.artifactId}-${project.version}/Gate.js</output>
							<includes>
								<include>**/dialog-polyfill.js</include>
								<include>**/Gate/Gate.js</include>
								<include>**/Duration.js</include>
								<include>**/Fetch.js</include>
								<include>**/Keys.js</include>
								<include>**/URL.js</include>
								<include>**/Calendar.js</include>
								<include>**/Link.js</include>
								<include>**/Button.js</include>
								<include>**/ActionHandler.js</include>
								<include>**/ChangeHandler.js</include>
								<include>**/Mask.js</include>
								<include>**/Modal.js</include>
								<include>**/Block.js</include>
								<include>**/DateDialog.js</include>
								<include>**/TimeDialog.js</include>
								<include>**/DateTimeDialog.js</include>
								<include>**/DateIntervalDialog.js</include>
								<include>**/TimeIntervalDialog.js</include>
								<include>**/DateTimeIntervalDialog.js</include>
								<include>**/Chart.js</include>
								<include>**/ChartDialog.js</include>
								<include>**/PageControl.js</include>
								<include>**/LinkControl.js</include>
								<include>**/Dialog.js</include>
								<include>**/Popup.js</include>
								<include>**/TreeView.js</include>
								<include>**/DateFormat.js</include>
								<include>**/Desktop.js</include>
								<include>**/Switch.js</include>
								<include>**/Clock.js</include>
								<include>**/RichTextarea.js</include>
								<include>**/FullScreen.js</include>
								<include>**/Form.js</include>
								<include>**/Progress.js</include>
								<include>**/Focus.js</include>
								<include>**/Sortable.js</include>
								<include>**/Message.js</include>
								<include>**/Return.js</include>
								<include>**/DeskMenu/DeskMenu.js</include>
								<include>**/DeskPane/DeskPane.js</include>
							</includes>
						</aggregation>
						<aggregation>
							<insertNewLine>true</insertNewLine>
							<inputDir>${basedir}/src/main/webapp/Gate</inputDir>
							<output>${basedir}/target/${project.artifactId}-${project.version}/Gate.css</output>
							<includes>
								<include>**/Gate/Gate.css</include>
								<include>**/Toolbar/Toolbar.css</include>
								<include>**/DeskMenu/DeskMenu.css</include>
								<include>**/DeskPane/DeskPane.css</include>
								<include>**/HMenu/HMenu.css</include>
							</includes>
						</aggregation>
					</aggregations>
					<includes>${project.build.directory}/
						<include>**/Gate.js</include>
					</includes>
					<jswarn>false</jswarn>
					<nosuffix>false</nosuffix>
				</configuration>
				<executions>
					<execution>
						<id>compress_js_css</id>
						<phase>process-resources</phase>
						<goals>
							<goal>compress</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
